// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meta css generated class name should have the correct id 1`] = `
.glamor-0 {
  color: blue;
}

.glamor-1 .glamor-0 {
  color: red;
}

<div
  className="glamor-1"
>
  <div
    className="glamor-0"
  />
</div>
`;

exports[`meta css generated class name should have the correct id 2`] = `
".css-14ksm7b-cls1 {
  color: blue;
}

.css-8oeh3r-cls2 .css-14ksm7b-cls1 {
  color: red;
}"
`;

exports[`meta css prop correctly adds the id 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="glamor-0"
>
  Hello
</div>
`;

exports[`meta css prop correctly adds the id 2`] = `
.glamor-0 {
  display: grid;
}

<div
  className="glamor-0"
>
  Hello
</div>
`;

exports[`meta css prop correctly adds the id 3`] = `
.glamor-0 {
  display: grid;
}

.glamor-1 {
  display: block;
}

<div
  className="glamor-1"
>
  <div
    className="glamor-0"
  >
    Hello
  </div>
</div>
`;

exports[`meta css prop correctly adds the id 4`] = `
".css-k008qs-SFC {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.css-lgj0h8-ClsComp {
  display: grid;
}

.css-13o7eu2-hoc {
  display: block;
}"
`;
